WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60410
Handle case when GrContext creation fails
https://bugs.webkit.org/show_bug.cgi?id=60410
Summary
Handle case when GrContext creation fails
Brian Salomon
Reported
2011-05-06 15:07:32 PDT
Handle case when GrContext creation fails
Attachments
Patch
(1.33 KB, patch)
2011-05-09 10:08 PDT
,
Brian Salomon
no flags
Details
Formatted Diff
Diff
Patch
(1.37 KB, patch)
2011-05-09 11:22 PDT
,
Brian Salomon
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brian Salomon
Comment 1
2011-05-09 10:08:20 PDT
Created
attachment 92802
[details]
Patch
Brian Salomon
Comment 2
2011-05-09 11:22:28 PDT
Created
attachment 92809
[details]
Patch
Eric Seidel (no email)
Comment 3
2011-05-11 19:38:20 PDT
Comment on
attachment 92809
[details]
Patch OK.
WebKit Commit Bot
Comment 4
2011-05-11 22:34:18 PDT
The commit-queue encountered the following flaky tests while processing
attachment 92809
[details]
: inspector/debugger/debugger-scripts.html
bug 59921
(authors:
pfeldman@chromium.org
and
podivilov@chromium.org
) http/tests/xmlhttprequest/cross-origin-authorization.html
bug 52398
(author:
ap@webkit.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2011-05-11 22:35:40 PDT
Comment on
attachment 92809
[details]
Patch Clearing flags on attachment: 92809 Committed
r86310
: <
http://trac.webkit.org/changeset/86310
>
WebKit Commit Bot
Comment 6
2011-05-11 22:35:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug