2011-05-11  Brian Salomon  <bsalomon@google.com>

Reviewed by Eric Seidel.

        Handle case when GrContext creation fails
        https://bugs.webkit.org/show_bug.cgi?id=60410

        Exercised by all canvas tests when DRT is run with skia-gpu

        * platform/graphics/gpu/SharedGraphicsContext3D.cpp:
        (WebCore::SharedGraphicsContext3D::grContext):

Canonical link: https://commits.webkit.org/75967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86310 268f45cc-cd09-0410-ab3c-d52691b4dbfc